Add support for building the latest version
Call "build-images --latest", and the kas-latest.yml will be selected.
That switches the preferred version of Jailhouse to 0.9999-next which
pulls from the next branch of Jailhouse.

As the configs directory in that version was restructured, we need to
adjust jailhouse.install to cater both setups. Also prepare it for
non-x86 demos at this chance.

This can be extended later on to also pulling the latest Jailhouse
kernel branch.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/kas-latest.yml
+++ b/kas-latest.yml
@@ -9,8 +9,11 @@
 # SPDX-License-Identifier: GPL-2.0
 #
 
-require conf/multiconfig/qemuamd64-stretch.conf
+header:
+  version: 5
+  includes:
+    - kas.yml
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-jailhouse"
-
-PREFERRED_VERSION_jailhouse ?= "0.8"
+local_conf_header:
+  latest: |
+    PREFERRED_VERSION_jailhouse = "0.9999-next"
