Switch Isar repository to upstream
All dependencies have been merged into upstream Isar now. Switch to
Isar's next branch, adjusting kernel and module build recipes to the
latest changes.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/kas.yml
+++ b/kas.yml
@@ -18,8 +18,8 @@ repos:
   jailhouse:
 
   isar:
-    url: https://github.com/siemens/isar
-    refspec: 0245f4d754efa92be4a9671074e7cd79e3e39452
+    url: https://github.com/ilbers/isar
+    refspec: 17399a2dc0dd1cdde716ce2ec75338346cb20fa4
     layers:
       meta:
       meta-isar:
