Update to Isar next
All functional dependencies have been merged into upstream Isar now.
Switch our source, updating kernel and module build recipes.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/multiconfig/qemuamd64-jailhouse.conf
+++ b/conf/multiconfig/qemuamd64-jailhouse.conf
@@ -11,6 +11,6 @@
 
 require conf/multiconfig/qemuamd64-stretch.conf
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-jailhouse"
+KERNEL_NAME = "jailhouse-amd64"
 
 PREFERRED_VERSION_jailhouse ?= "0.8"
