--- a/recipes-jailhouse/jailhouse/files/debian/control
+++ b/recipes-jailhouse/jailhouse/files/debian/control
@@ -2,7 +2,7 @@ Source: jailhouse
 Section: misc
 Priority: optional
 Standards-Version: 3.9.6
-Build-Depends: linux-headers-@KERNEL_NAME@, python-mako
+Build-Depends: linux-headers-@KERNEL_NAME@, python-mako, git
 Maintainer: Jan Kiszka <jan.kiszka@siemens.com>
 
 Package: jailhouse
