Add initramfs for non-root Linux inmates
This builds a small initramfs via buildroot that provides basic
infrastructure and some test tools for non-root Linux inmates. Might be
replaced by something built from Debian binaries later on, to speed-up
the build time.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-core/non-root-initramfs/files/debian/rules
+++ b/recipes-core/non-root-initramfs/files/debian/rules
@@ -1,3 +1,4 @@
+#!/usr/bin/make -f
 #
 # Jailhouse, a Linux-based partitioning hypervisor
 #
@@ -9,8 +10,13 @@
 # SPDX-License-Identifier: GPL-2.0
 #
 
-require recipes-core/images/isar-image-base.bb
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
 
-IMAGE_PREINSTALL += "bash-completion less vim nano"
+binary:
+	cp ../.config .
+	${MAKE} olddefconfig
+	dh $@ --parallel
 
-IMAGE_INSTALL += "jailhouse customizations non-root-initramfs"
+%:
+	dh $@ --parallel
