Enable network to non-root cells
Enable the ivshmem-net driver in the kernel and add a network config for
the link to the non-root cell. Also pre-fill known_hosts with the key of
the non-root inmate we built. ethtool is added because it can help
debugging the ivshmem-net driver.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-kernel/linux/files/x86_64_defconfig
+++ b/recipes-kernel/linux/files/x86_64_defconfig
@@ -1858,7 +1858,7 @@ CONFIG_WLAN_VENDOR_QUANTENNA=y
 # CONFIG_WAN is not set
 # CONFIG_VMXNET3 is not set
 # CONFIG_FUJITSU_ES is not set
-# CONFIG_IVSHMEM_NET is not set
+CONFIG_IVSHMEM_NET=y
 # CONFIG_ISDN is not set
 # CONFIG_NVM is not set
 
