Factor out distro configuration
...and move the common preferred Jailhouse version over.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -9,7 +9,4 @@
 # SPDX-License-Identifier: GPL-2.0
 #
 
-require conf/multiconfig/qemuamd64-stretch.conf
-require conf/distro/jailhouse-demo.conf
-
-KERNEL_NAME = "jailhouse-amd64"
+PREFERRED_VERSION_jailhouse ?= "0.8"
