--- a/conf/multiconfig/qemuarm64-jailhouse.conf
+++ b/conf/multiconfig/qemuarm64-jailhouse.conf
@@ -10,7 +10,6 @@
 #
 
 require conf/multiconfig/qemuarm64-stretch.conf
+require conf/distro/jailhouse-demo.conf
 
 KERNEL_NAME = "jailhouse-arm64"
-
-PREFERRED_VERSION_jailhouse ?= "0.8"
