linux-jailhouse: Enable debug console driver
Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-kernel/linux/files/qemuarm64_defconfig
+++ b/recipes-kernel/linux/files/qemuarm64_defconfig
@@ -3602,7 +3602,8 @@ CONFIG_VFIO_PCI_INTX=y
 # CONFIG_VFIO_PLATFORM is not set
 # CONFIG_VFIO_MDEV is not set
 CONFIG_IRQ_BYPASS_MANAGER=y
-# CONFIG_VIRT_DRIVERS is not set
+CONFIG_VIRT_DRIVERS=y
+CONFIG_JAILHOUSE_DBGCON=y
 CONFIG_VIRTIO=y
 
 #
