--- a/recipes-kernel/linux/files/qemuamd64_defconfig
+++ b/recipes-kernel/linux/files/qemuamd64_defconfig
@@ -3107,7 +3107,8 @@ CONFIG_SYNC_FILE=y
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
 # CONFIG_VFIO is not set
-# CONFIG_VIRT_DRIVERS is not set
+CONFIG_VIRT_DRIVERS=y
+CONFIG_JAILHOUSE_DBGCON=y
 CONFIG_VIRTIO=y
 
 #
