Add out-of-tree WLAN driver for Orange Pi Zero
The upstream kernel lacks support for the xr819 WLAN chip on the Orange
Pi Zero. This adds the out-of-tree driver and the necessary firmware
files that circle around on github. The performance is not overly
impressive, specifically the downstream latency is horrible, but it
saves the LAN cable.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/multiconfig/orangepi-zero-jailhouse.conf
+++ b/conf/multiconfig/orangepi-zero-jailhouse.conf
@@ -18,6 +18,8 @@ require conf/distro/jailhouse-demo.conf
 
 KERNEL_NAME = "jailhouse-armhf"
 
+IMAGE_INSTALL_append = " xradio"
+
 IMAGE_TYPE = "wic-img"
 WKS_FILE ?= "orangepi-zero"
 
