--- a/recipes-core/non-root-initramfs/files/debian/control
+++ b/recipes-core/non-root-initramfs/files/debian/control
@@ -2,7 +2,7 @@ Source: non-root-initramfs
 Section: misc
 Priority: optional
 Standards-Version: 3.9.6
-Build-Depends: build-essential, wget, cpio, unzip, rsync, python, bc
+Build-Depends: wget, cpio, unzip, rsync, python, bc
 Maintainer: Jan Kiszka <jan.kiszka@siemens.com>
 
 Package: non-root-initramfs
