Use machine-specific image names
This prepares for multiple targets of the same architecture. This will
have some variations that result in different images.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/kas.yml
+++ b/kas.yml
@@ -12,7 +12,7 @@
 header:
   version: 5
 
-target: multiconfig:qemuamd64-jailhouse:demo-image
+target: multiconfig:qemuamd64-jailhouse:demo-image-qemuamd64
 
 repos:
   jailhouse:
