jailhouse: Prepare for cross-compiling the package
When cross-compiling, we need to specify the python build dependencies
as :native. Otherwise, the target python packages would be installed,
and they cannot run inside a host-targeted build environment.

Furthermore, ARCH and CROSS_COMPILE now need to be injected into the
build.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-jailhouse/jailhouse/files/debian/rules
+++ b/recipes-jailhouse/jailhouse/files/debian/rules
@@ -15,5 +15,17 @@ export prefix=/usr
 
 export DEB_BUILD_OPTIONS=parallel=$(shell nproc)
 
+export CROSS_COMPILE=$(DEB_HOST_GNU_TYPE)-
+
+ifeq ($(DEB_HOST_GNU_CPU), arm)
+export ARCH=arm
+endif
+ifeq ($(DEB_HOST_GNU_CPU), aarch64)
+export ARCH=arm64
+endif
+ifneq (,$(findstring 86,$(DEB_HOST_GNU_CPU)))
+export ARCH=x86
+endif
+
 %:
 	CFLAGS= LDFLAGS= dh $@ --parallel --with python2
