--- a/recipes-jailhouse/jailhouse/files/debian/control
+++ b/recipes-jailhouse/jailhouse/files/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: optional
 Standards-Version: 3.9.6
 Build-Depends: linux-headers-@KERNEL_NAME@, git,
-               dh-python, python-pip, python-setuptools, python-mako
+               dh-python, python-pip:native, python-setuptools, python-mako:native
 Maintainer: Jan Kiszka <jan.kiszka@siemens.com>
 X-Python-Version: >= 2.7
 
