--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -17,3 +17,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "jailhouse"
 BBFILE_PATTERN_jailhouse = "^${LAYERDIR}/"
 BBFILE_PRIORITY_jailhouse = "6"
+
+LAYERDIR_jailhouse = "${LAYERDIR}"
