--- a/recipes-kernel/linux/files/qemuarm64_defconfig
+++ b/recipes-kernel/linux/files/qemuarm64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.50 Kernel Configuration
+# Linux/arm64 4.14.62 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -588,6 +588,7 @@ CONFIG_CRASH_DUMP=y
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_HARDEN_BRANCH_PREDICTOR=y
+CONFIG_ARM64_SSBD=y
 # CONFIG_ARMV8_DEPRECATED is not set
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 
