Update Isar revision
This comes with a number of fixes which we will need for the upcoming
ESPRESSObin support.

It also comes with the need to adjust dpkg recipes so that preparation
steps such as Debianizations are moved into do_prepare_build.
Furthermore, BUILDCHROOT_PREINSTALL_WIC was replaced with IMAGE_INSTALL.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/multiconfig/orangepi-zero-jailhouse.conf
+++ b/conf/multiconfig/orangepi-zero-jailhouse.conf
@@ -22,8 +22,7 @@ IMAGE_INSTALL_append = " xradio"
 
 IMAGE_TYPE = "wic-img"
 WKS_FILE ?= "orangepi-zero"
-
-BUILDCHROOT_PREINSTALL_WIC_append = " u-boot-sunxi"
+IMAGER_INSTALL += "u-boot-sunxi"
 
 DISTRO_APT_SOURCES_append = " conf/distro/debian-buster.list"
 DISTRO_APT_PREFERENCES += "conf/multiconfig/preferences.orangepi-zero.conf"
