qemuamd64: Switch to ext4-img
No need to use the default wks file for this target which creates a
bootable disk with grub. We boot this target via -kernel directly. This
also makes qemuamd64 more similar to qemuarm64.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/multiconfig/qemuamd64-jailhouse.conf
+++ b/conf/multiconfig/qemuamd64-jailhouse.conf
@@ -14,3 +14,5 @@ require conf/multiconfig/qemuamd64-stretch.conf
 DISTRO = "jailhouse-demo"
 
 KERNEL_NAME = "jailhouse-amd64"
+
+IMAGE_TYPE = "ext4-img"
