Set distro name jailhouse-demo in multiconfig files
Include our distro conf implicitly by initializing DISTRO properly so
that bitbake can do the rest.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/multiconfig/orangepi-zero-jailhouse.conf
+++ b/conf/multiconfig/orangepi-zero-jailhouse.conf
@@ -14,7 +14,8 @@ MACHINE ?= "orangepi-zero"
 ROOTFS_DEV ?= "mmcblk0p1"
 
 require conf/multiconfig/qemuarm-stretch.conf
-require conf/distro/jailhouse-demo.conf
+
+DISTRO = "jailhouse-demo"
 
 KERNEL_NAME = "jailhouse-armhf"
 
