--- a/conf/multiconfig/qemuamd64-jailhouse.conf
+++ b/conf/multiconfig/qemuamd64-jailhouse.conf
@@ -10,6 +10,7 @@
 #
 
 require conf/multiconfig/qemuamd64-stretch.conf
-require conf/distro/jailhouse-demo.conf
+
+DISTRO = "jailhouse-demo"
 
 KERNEL_NAME = "jailhouse-amd64"
