Refactor multiconfig files
This makes the multiconfig files independent of meta-isar config files
and consolidates commodities further. The outcome are targeted config
files that provide no use case for weak assignments anymore, thus they
are converted to regular ones.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -11,4 +11,8 @@
 
 require conf/distro/debian-stretch.conf
 
+IMAGE_PREINSTALL += "init"
+
+KERNEL_NAME = "jailhouse-${DISTRO_ARCH}"
+
 PREFERRED_VERSION_jailhouse ?= "0.9.1"
