--- a/conf/multiconfig/orangepi-zero-jailhouse.conf
+++ b/conf/multiconfig/orangepi-zero-jailhouse.conf
@@ -9,24 +9,21 @@
 # SPDX-License-Identifier: GPL-2.0
 #
 
-MACHINE ?= "orangepi-zero"
-
-ROOTFS_DEV ?= "mmcblk0p1"
-
-require conf/multiconfig/qemuarm-stretch.conf
+MACHINE = "orangepi-zero"
 
 DISTRO = "jailhouse-demo"
-
-KERNEL_NAME = "jailhouse-armhf"
-
-IMAGE_INSTALL_append = " xradio"
+DISTRO_ARCH = "armhf"
 
 IMAGE_TYPE = "wic-img"
-WKS_FILE ?= "orangepi-zero"
+WKS_FILE = "orangepi-zero"
 IMAGER_INSTALL += "u-boot-sunxi"
+
+ROOTFS_DEV = "mmcblk0p1"
 
 DISTRO_APT_SOURCES_append = " conf/distro/debian-buster.list"
 DISTRO_APT_PREFERENCES += "conf/multiconfig/preferences.orangepi-zero.conf"
+
+IMAGE_INSTALL_append = " xradio"
 
 MACHINE_SERIAL = "ttyS0"
 BAUDRATE_TTY = "115200"
