--- a/conf/multiconfig/qemuamd64-jailhouse.conf
+++ b/conf/multiconfig/qemuamd64-jailhouse.conf
@@ -9,10 +9,8 @@
 # SPDX-License-Identifier: GPL-2.0
 #
 
-require conf/multiconfig/qemuamd64-stretch.conf
+require qemu-target.inc
 
-DISTRO = "jailhouse-demo"
+MACHINE = "qemuamd64"
 
-KERNEL_NAME = "jailhouse-amd64"
-
-IMAGE_TYPE = "ext4-img"
+DISTRO_ARCH = "amd64"
