--- a/conf/multiconfig/qemuarm64-jailhouse.conf
+++ b/conf/multiconfig/qemuarm64-jailhouse.conf
@@ -9,8 +9,8 @@
 # SPDX-License-Identifier: GPL-2.0
 #
 
-require conf/multiconfig/qemuarm64-stretch.conf
+require qemu-target.inc
 
-DISTRO = "jailhouse-demo"
+MACHINE = "qemuarm64"
 
-KERNEL_NAME = "jailhouse-arm64"
+DISTRO_ARCH = "arm64"
