linux-jailhouse: Add support for HiKey board
We just need to enable the drivers for the Hi655x clock and the on-board
wifi adapter and add the machine to the arm64 class.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-kernel/linux/files/arm64_defconfig
+++ b/recipes-kernel/linux/files/arm64_defconfig
@@ -1871,13 +1871,7 @@ CONFIG_WLAN_VENDOR_ATMEL=y
 CONFIG_AT76C50X_USB=m
 CONFIG_WLAN_VENDOR_BROADCOM=y
 # CONFIG_B43 is not set
-# CONFIG_B43_BUSES_BCMA_AND_SSB is not set
-# CONFIG_B43_BUSES_BCMA is not set
-# CONFIG_B43_BUSES_SSB is not set
 # CONFIG_B43LEGACY is not set
-# CONFIG_B43LEGACY_DMA_AND_PIO_MODE is not set
-# CONFIG_B43LEGACY_DMA_MODE is not set
-# CONFIG_B43LEGACY_PIO_MODE is not set
 CONFIG_BRCMUTIL=m
 # CONFIG_BRCMSMAC is not set
 CONFIG_BRCMFMAC=m
@@ -1975,8 +1969,11 @@ CONFIG_WLAN_VENDOR_ST=y
 CONFIG_WLAN_VENDOR_TI=y
 # CONFIG_WL1251 is not set
 # CONFIG_WL12XX is not set
-# CONFIG_WL18XX is not set
-# CONFIG_WLCORE is not set
+CONFIG_WL18XX=m
+CONFIG_WLCORE=m
+# CONFIG_WLCORE_SPI is not set
+CONFIG_WLCORE_SDIO=m
+CONFIG_WILINK_PLATFORM_DATA=y
 CONFIG_WLAN_VENDOR_ZYDAS=y
 CONFIG_USB_ZD1201=m
 CONFIG_ZD1211RW=m
@@ -3827,7 +3824,7 @@ CONFIG_CLK_VEXPRESS_OSC=y
 # CONFIG_CLK_HSDK is not set
 # CONFIG_COMMON_CLK_MAX77686 is not set
 CONFIG_COMMON_CLK_RK808=y
-# CONFIG_COMMON_CLK_HI655X is not set
+CONFIG_COMMON_CLK_HI655X=y
 CONFIG_COMMON_CLK_SCPI=y
 # CONFIG_COMMON_CLK_SI5351 is not set
 # CONFIG_COMMON_CLK_SI514 is not set
