--- a/conf/multiconfig/hikey-jailhouse.conf
+++ b/conf/multiconfig/hikey-jailhouse.conf
@@ -6,7 +6,7 @@
 # Authors:
 #  Jan Kiszka <jan.kiszka@siemens.com>
 #
-# SPDX-License-Identifier: GPL-2.0
+# SPDX-License-Identifier: MIT
 #
 
 MACHINE = "hikey"
