--- a/recipes-jailhouse/jailhouse/files/debian/rules
+++ b/recipes-jailhouse/jailhouse/files/debian/rules
@@ -7,7 +7,7 @@
 # Authors:
 #  Jan Kiszka <jan.kiszka@siemens.com>
 #
-# SPDX-License-Identifier: GPL-2.0
+# SPDX-License-Identifier: MIT
 #
 
 export KDIR=$(shell ls -d /lib/modules/*/build)
