Update to latest Isar
This brings a change in the custom kernel name definition as well as in
the u-boot-script config file. Moreover, we can drop the explicit init
installation because it's now part of the distro conf. And ROOTFS_DEV is
history as well.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -11,8 +11,6 @@
 
 require conf/distro/debian-stretch.conf
 
-IMAGE_PREINSTALL += "init"
-
-KERNEL_NAME = "jailhouse-${DISTRO_ARCH}"
+KERNEL_NAME = "jailhouse"
 
 PREFERRED_VERSION_jailhouse ?= "0.10"
