jailhouse-linux: Add MACCHIATObin support
This enables USB and Ethernet in the arm64_defconfig and maps the new
machine to it.

While at it, disable LOCALVERSION_AUTO which will cause troubles if we
ever try to use a git repo as source. Aligns ARM64 with the other archs.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-kernel/linux/files/arm64_defconfig
+++ b/recipes-kernel/linux/files/arm64_defconfig
@@ -47,7 +47,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="aarch64-linux-gnu-"
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -1776,8 +1776,8 @@ CONFIG_FIXED_PHY=y
 # CONFIG_INTEL_XWAY_PHY is not set
 # CONFIG_LSI_ET1011C_PHY is not set
 # CONFIG_LXT_PHY is not set
-# CONFIG_MARVELL_PHY is not set
-# CONFIG_MARVELL_10G_PHY is not set
+CONFIG_MARVELL_PHY=y
+CONFIG_MARVELL_10G_PHY=y
 # CONFIG_MESON_GXL_PHY is not set
 CONFIG_MICREL_PHY=y
 # CONFIG_MICROCHIP_PHY is not set
@@ -2620,6 +2620,7 @@ CONFIG_BATTERY_BQ27XXX_I2C=y
 # CONFIG_BATTERY_BQ27XXX_DT_UPDATES_NVM is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
+# CONFIG_CHARGER_ISP1704 is not set
 # CONFIG_CHARGER_MAX8903 is not set
 # CONFIG_CHARGER_LP8727 is not set
 # CONFIG_CHARGER_GPIO is not set
@@ -3385,6 +3386,7 @@ CONFIG_USB_DWC2_DUAL_ROLE=y
 # CONFIG_USB_DWC2_TRACK_MISSED_SOFS is not set
 CONFIG_USB_CHIPIDEA=y
 CONFIG_USB_CHIPIDEA_OF=y
+CONFIG_USB_CHIPIDEA_PCI=m
 CONFIG_USB_CHIPIDEA_UDC=y
 CONFIG_USB_CHIPIDEA_HOST=y
 CONFIG_USB_ISP1760=y
@@ -3431,8 +3433,8 @@ CONFIG_USB_HSIC_USB3503=y
 #
 # USB Physical Layer drivers
 #
-# CONFIG_USB_PHY is not set
-# CONFIG_NOP_USB_XCEIV is not set
+CONFIG_USB_PHY=y
+CONFIG_NOP_USB_XCEIV=m
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ISP1301 is not set
 # CONFIG_USB_MSM_OTG is not set
@@ -4435,7 +4437,7 @@ CONFIG_PHY_BRCM_SATA=y
 CONFIG_PHY_HI6220_USB=y
 # CONFIG_PHY_BERLIN_SATA is not set
 # CONFIG_PHY_BERLIN_USB is not set
-# CONFIG_PHY_MVEBU_CP110_COMPHY is not set
+CONFIG_PHY_MVEBU_CP110_COMPHY=y
 # CONFIG_PHY_PXA_28NM_HSIC is not set
 # CONFIG_PHY_PXA_28NM_USB2 is not set
 # CONFIG_PHY_MTK_TPHY is not set
