Define WKS_FILE in distro config
There is a pattern in our WKS_FILE naming, and that is ${MACHINE}. So
simply define it in the jailhouse-demo.conf, it's harmless to do so for
targets that do not use it.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -13,4 +13,6 @@ require conf/distro/debian-stretch.conf
 
 KERNEL_NAME = "jailhouse"
 
+WKS_FILE = "${MACHINE}"
+
 PREFERRED_VERSION_jailhouse ?= "0.10"
