--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -13,6 +13,6 @@ require conf/distro/debian-stretch.conf
 
 KERNEL_NAME = "jailhouse"
 
-WKS_FILE = "${MACHINE}"
+WKS_FILE = "${MACHINE}.wks"
 
 PREFERRED_VERSION_jailhouse ?= "0.10"
