--- a/conf/machine/macchiatobin.conf
+++ b/conf/machine/macchiatobin.conf
@@ -9,6 +9,8 @@
 # SPDX-License-Identifier: MIT
 #
 
-MACHINE = "espressobin"
+DISTRO_ARCH = "arm64"
 
-DISTRO = "jailhouse-demo"
+IMAGE_TYPE = "wic-img"
+IMAGER_INSTALL += "u-boot-macchiatobin"
+IMAGER_BUILD_DEPS += "u-boot-macchiatobin"
