--- a/conf/machine/qemu-amd64.conf
+++ b/conf/machine/qemu-amd64.conf
@@ -9,6 +9,6 @@
 # SPDX-License-Identifier: MIT
 #
 
-MACHINE = "espressobin"
+require qemu-machine.inc
 
-DISTRO = "jailhouse-demo"
+DISTRO_ARCH = "amd64"
