--- a/conf/multiconfig/qemu-arm64-jailhouse-demo.conf
+++ b/conf/multiconfig/qemu-arm64-jailhouse-demo.conf
@@ -9,8 +9,6 @@
 # SPDX-License-Identifier: MIT
 #
 
-require qemu-target.inc
+MACHINE = "qemu-arm64"
 
-MACHINE = "qemuarm64"
-
-DISTRO_ARCH = "arm64"
+DISTRO = "jailhouse-demo"
