--- a/conf/machine/hikey.conf
+++ b/conf/machine/hikey.conf
@@ -9,6 +9,9 @@
 # SPDX-License-Identifier: MIT
 #
 
-MACHINE = "espressobin"
+DISTRO_ARCH = "arm64"
 
-DISTRO = "jailhouse-demo"
+IMAGE_TYPE = "wic-img"
+IMAGER_INSTALL += "${GRUB_BOOTLOADER_INSTALL}"
+
+IMAGE_PREINSTALL_append = " firmware-ti-connectivity"
