--- a/conf/machine/qemu-arm64.conf
+++ b/conf/machine/qemu-arm64.conf
@@ -9,9 +9,6 @@
 # SPDX-License-Identifier: MIT
 #
 
-DISTRO = "jailhouse-demo"
+require qemu-machine.inc
 
-IMAGE_TYPE = "ext4-img"
-
-IMAGE_INSTALL_remove += "expand-on-first-boot"
-ROOTFS_EXTRA = "1024"
+DISTRO_ARCH = "arm64"
