linux-jailhouse: Add real-time variant of the kernel
Provide a 4.19-rt-based kernel alternative for both root and non-root
cell. This can be selected by appending "--rt" to the build-images.sh.
At this stage, the support should be considered experimental.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/opt-rt.yml
+++ b/opt-rt.yml
@@ -9,10 +9,9 @@
 # SPDX-License-Identifier: MIT
 #
 
-require conf/distro/debian-stretch.conf
+header:
+  version: 8
 
-KERNEL_NAME ?= "jailhouse"
-
-WKS_FILE = "${MACHINE}.wks"
-
-PREFERRED_VERSION_jailhouse ?= "0.10"
+local_conf_header:
+  preempt-rt: |
+    KERNEL_NAME = "jailhouse-rt"
