--- a/recipes-core/non-root-initramfs/files/debian/rules
+++ b/recipes-core/non-root-initramfs/files/debian/rules
@@ -13,11 +13,23 @@
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
-binary:
+build-image:
 	cp ../.config .
 	${MAKE} olddefconfig
-	dh $@ --parallel
+	${MAKE}
 
+# Only this target runs outside of fakeroot. We need to hook into it because
+# buildroot uses fakeroot itself.
+build: build-image
+
+# This target saves autotools outputs from output/. But we perform a clean
+# rebuild so that restoring the files may fail and is also not needed.
+override_dh_update_autotools_config:
+
+# We are building via build-image.
+override_dh_auto_build:
+
+# No test desired.
 override_dh_auto_test:
 
 %:
