jailhouse: Make package name kernel-specific
This allows to use different kernels for different targets of the same
architecture.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/opt-latest.yml
+++ b/opt-latest.yml
@@ -14,4 +14,4 @@ header:
 
 local_conf_header:
   latest: |
-    PREFERRED_VERSION_jailhouse = "0.9999-next"
+    PREFERRED_VERSION_jailhouse-${KERNEL_NAME} = "0.9999-next"
