--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -15,4 +15,4 @@ KERNEL_NAME ?= "jailhouse"
 
 WKS_FILE = "${MACHINE}.wks"
 
-PREFERRED_VERSION_jailhouse ?= "0.10"
+PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.10"
