Update to Isar version
This brings a number of changes for our recipes:
 - u-boot-script parameters moved to rootfs-u-boot wic plugin
 - images deploy dir moved
 - dpkg-raw packages no longer need to clean nor set file owners
 - module package names now carry the kernel name
 - LAYERSERIES_COMPAT should be set

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -18,4 +18,6 @@ BBFILE_COLLECTIONS += "jailhouse"
 BBFILE_PATTERN_jailhouse = "^${LAYERDIR}/"
 BBFILE_PRIORITY_jailhouse = "6"
 
+LAYERSERIES_COMPAT_jailhouse = "next"
+
 LAYERDIR_jailhouse = "${LAYERDIR}"
