macchiatobin: Set preferred u-boot provider
This will prevent that we run into conflicts with other u-boot recipes.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/machine/macchiatobin.conf
+++ b/conf/machine/macchiatobin.conf
@@ -14,3 +14,6 @@ DISTRO_ARCH = "arm64"
 IMAGE_TYPE = "wic-img"
 IMAGER_INSTALL += "u-boot-macchiatobin"
 IMAGER_BUILD_DEPS += "u-boot-macchiatobin"
+
+PREFERRED_PROVIDER_u-boot-macchiatobin = "u-boot-macchiatobin"
+PREFERRED_PROVIDER_u-boot-tools = "u-boot-macchiatobin"
