Move u-boot-script installation into machine conf
The customizations package no longer depends on u-boot-script because it
no longer modifies its default conf. So it's cleaner to select the
u-boot-script installation via the respective machine conf.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/machine/orangepi-zero.conf
+++ b/conf/machine/orangepi-zero.conf
@@ -17,4 +17,4 @@ IMAGER_INSTALL += "u-boot-sunxi"
 DISTRO_APT_SOURCES_append = " conf/distro/debian-buster.list"
 DISTRO_APT_PREFERENCES += "conf/machine/preferences.orangepi-zero.conf"
 
-IMAGE_INSTALL_append = " xradio-${KERNEL_NAME}"
+IMAGE_INSTALL += "u-boot-script xradio-${KERNEL_NAME}"
