--- a/conf/machine/macchiatobin.conf
+++ b/conf/machine/macchiatobin.conf
@@ -15,5 +15,7 @@ IMAGE_TYPE = "wic-img"
 IMAGER_INSTALL += "u-boot-macchiatobin"
 IMAGER_BUILD_DEPS += "u-boot-macchiatobin"
 
+IMAGE_INSTALL += "u-boot-script"
+
 PREFERRED_PROVIDER_u-boot-macchiatobin = "u-boot-macchiatobin"
 PREFERRED_PROVIDER_u-boot-tools = "u-boot-macchiatobin"
