ci: Build RT kernel
Build the alternative target with the RT kernel to cover also that
variation.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,4 +16,4 @@ all:
     - export KAS_TARGET
     - cd ..
     - kas build jailhouse-images/kas.yml
-    - kas build jailhouse-images/kas.yml:jailhouse-images/opt-latest.yml
+    - kas build jailhouse-images/kas.yml:jailhouse-images/opt-latest.yml:jailhouse-images/opt-rt.yml
