Update to latest Isar
This changes the way the root password is configured and allows to drop
the machine name from the image recipe name because Isar directs the
output into machine-specific workdirs now. Futhermore, isar-image became
just image.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ all:
     - export ftp_proxy=$FTP_PROXY
     - export no_proxy=$NO_PROXY
     - while read MACHINE DESCRIPTION; do
-          KAS_TARGET="${KAS_TARGET} multiconfig:${MACHINE}-jailhouse-demo:demo-image-${MACHINE}";
+          KAS_TARGET="${KAS_TARGET} multiconfig:${MACHINE}-jailhouse-demo:demo-image";
       done < images.list
     - export KAS_TARGET
     - cd ..
