--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -16,3 +16,6 @@ KERNEL_NAME ?= "jailhouse"
 WKS_FILE = "${MACHINE}.wks"
 
 PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.10"
+
+# 'root'
+CFG_ROOT_PW = "oC3wEGl799tZU"
