Update to latest Isar next
This currently requires to set HOST_DISTRO explicitly. Furthermore, the
way the root password is set has been changed and the filenames of
kernel and initrd artifacts.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -11,11 +11,14 @@
 
 require conf/distro/debian-stretch.conf
 
+HOST_DISTRO ?= "debian-stretch"
+
 KERNEL_NAME ?= "jailhouse"
 
 WKS_FILE = "${MACHINE}.wks"
 
 PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.10"
 
+USERS += "root"
 # 'root'
-CFG_ROOT_PW = "oC3wEGl799tZU"
+USER_root[password] = "oC3wEGl799tZU"
