Update Isar revision
This allows to drop the explicit HOST_DISTRO setting. The new Isar
version strongly suggests to add on-device ssh key generation, so do
this.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -1,7 +1,7 @@
 #
 # Jailhouse, a Linux-based partitioning hypervisor
 #
-# Copyright (c) Siemens AG, 2018
+# Copyright (c) Siemens AG, 2018-2019
 #
 # Authors:
 #  Jan Kiszka <jan.kiszka@siemens.com>
@@ -10,8 +10,6 @@
 #
 
 require conf/distro/debian-stretch.conf
-
-HOST_DISTRO ?= "debian-stretch"
 
 KERNEL_NAME ?= "jailhouse"
 
