--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -15,7 +15,7 @@ KERNEL_NAME ?= "jailhouse"
 
 WKS_FILE = "${MACHINE}.wks"
 
-PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.11"
+PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.9999-next"
 
 USERS += "root"
 # 'root'
