linux-jailhouse: Add RPi4 variant of the kernel
The Raspberry Pi 4 is still on its way towards mainline, probably the
next LTS will look much brighter. For now, we need to maintain a
separate branch and provide a separate recipe here in order to have a
functioning kernel with the required Jailhouse patches.

The defconfig is derived from bcm2711_defconfig in that downstream
kernel.

We do not have an -rt variant at the moment because the RPi hackers
didn't provide one for 5.4 yet. So, building with --rt will just fail.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/opt-rt.yml
+++ b/opt-rt.yml
@@ -1,7 +1,7 @@
 #
 # Jailhouse, a Linux-based partitioning hypervisor
 #
-# Copyright (c) Siemens AG, 2018
+# Copyright (c) Siemens AG, 2018-2020
 #
 # Authors:
 #  Jan Kiszka <jan.kiszka@siemens.com>
@@ -15,3 +15,4 @@ header:
 local_conf_header:
   preempt-rt: |
     KERNEL_NAME = "jailhouse-rt"
+    KERNEL_NAME_rpi4 = "not-supported"
