jailhouse: Update to 0.12
We have a new stable version, switch to it as default. As usual, this
allows to drop merged patches, and we can also remove the deviating
NUC6CAY configs for 0.11.

Unfortunately, 0.12 had a regression in some configs that affects
supported targets. So we need to add a new patch from the beginning.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -15,7 +15,7 @@ KERNEL_NAME ?= "jailhouse"
 
 WKS_FILE = "${MACHINE}.wks"
 
-PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.9999-next"
+PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.12"
 
 USERS += "root"
 # 'root'
