crosstool-ng-microblaze: Switch to github download
crosstool-ng.org is down for a couple of days. Better us the more
reliable github source. This just requires some minor adjustments to
paths and the rules file because github packages a git snapshot, not a
real release package. The snapshot also already contains a debian
folder, but we better rely on our version that is tuned for the
microblaze use case - and known to work.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-devtools/crosstool-ng-microblaze/files/debian/rules
+++ b/recipes-devtools/crosstool-ng-microblaze/files/debian/rules
@@ -14,6 +14,7 @@ DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
 override_dh_auto_configure:
+	test -e configure || ./bootstrap
 	./configure --enable-local
 
 override_dh_auto_build:
