non-root-initramfs: Allow compilation as root
If the kas build container is started as root, the host-tar configure
step in buildroot will bail out. Beside accidental manual invocation as
root, some CI setup my generate such a scenario. Avoid that failure by
setting the env variable that the configure step suggests.

Reported by: Parth Dode <dodecoder@gmail.com>
Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-core/non-root-initramfs/files/debian/rules
+++ b/recipes-core/non-root-initramfs/files/debian/rules
@@ -13,6 +13,9 @@
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
+# Needed in case we run as root (for whatever reason)
+export FORCE_UNSAFE_CONFIGURE=1
+
 override_dh_auto_configure:
 	cp ../.config .
 	${MAKE} olddefconfig
