rpi-firmware: Update to 1.20290212
This requires to name call kernel "kernel8.img" or it will not be found
anymore.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/machine/rpi4.conf
+++ b/conf/machine/rpi4.conf
@@ -26,7 +26,7 @@ IMAGE_BOOT_FILES = " \
     /usr/lib/rpi-firmware/bcm2711-rpi-4-b.dtb;bcm2711-rpi-4-b.dtb \
     /usr/lib/rpi-firmware/overlays/*;overlays/ \
     /usr/lib/arm-trusted-firmware/rpi4/bl31.bin;bl31.bin \
-    /vmlinuz;kernel.img \
+    /vmlinuz;kernel8.img \
     "
 
 KERNEL_NAME ?= "jailhouse-rpi"
