rpi4: Pick up dtbs from self-built kernel
This should avoid firmware updates when the only difference is a new dtb
or overlay with some adjusted or new bindings. Apparently, the same
pattern is used also by meta-raspberrypi on the OE side.

Suggested-by: Jakub Lužný <jakub@luzny.cz>
Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/machine/rpi4.conf
+++ b/conf/machine/rpi4.conf
@@ -23,8 +23,9 @@ IMAGE_BOOT_FILES = " \
     /usr/lib/rpi-firmware/fixup4x.dat;fixup4x.dat \
     /usr/lib/rpi-firmware/start4.elf;start4.elf \
     /usr/lib/rpi-firmware/start4x.elf;start4x.elf \
-    /usr/lib/rpi-firmware/bcm2711-rpi-4-b.dtb;bcm2711-rpi-4-b.dtb \
     /usr/lib/rpi-firmware/overlays/*;overlays/ \
+    /usr/lib/linux-image-*/broadcom/bcm2711-rpi-4-b.dtb \
+    /usr/lib/linux-image-*/overlays/*;overlays/ \
     /usr/lib/arm-trusted-firmware/rpi4/bl31.bin;bl31.bin \
     /vmlinuz;kernel8.img \
     "
