ultra96: Rename to ultra96-v1
This prepares for adding support for the v2 which will be widely
identical, except where not:
 - fsbl
 - bitstream
 - device tree

The PMU firmware will be customized later as the current version works
sufficiently well for both boards.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/machine/ultra96-v1.conf
+++ b/conf/machine/ultra96-v1.conf
@@ -1,7 +1,7 @@
 #
 # Jailhouse, a Linux-based partitioning hypervisor
 #
-# Copyright (c) Siemens AG, 2019
+# Copyright (c) Siemens AG, 2019-2020
 #
 # Authors:
 #  Jan Kiszka <jan.kiszka@siemens.com>
@@ -9,6 +9,6 @@
 # SPDX-License-Identifier: MIT
 #
 
-MACHINE = "ultra96"
+require ultra96.inc
 
-DISTRO = "jailhouse-demo"
+ULTRA96_VERSION = "1"
