--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -13,7 +13,7 @@ require conf/distro/debian-buster.conf
 
 KERNEL_NAME ?= "jailhouse"
 
-WKS_FILE = "${MACHINE}.wks"
+WKS_FILE ?= "${MACHINE}.wks"
 
 PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.12"
 
