Consolidate PREFERRED_PROVIDER_u-boot
We have a regular schema here, so pull that into the distro conf.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -17,6 +17,8 @@ WKS_FILE ?= "${MACHINE}.wks"
 
 PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.12"
 
+PREFERRED_PROVIDER_u-boot-${MACHINE} ?= "u-boot-${MACHINE}"
+
 USERS += "root"
 # 'root'
 USER_root[password] = "oC3wEGl799tZU"
