Add new TF-A build infrastructure
This prepares for building Trusted Firmware A always as package, like we
already do for rpi4. The infrastructure is added as Isar path that will
be upstreamed soon.

TF-A will will be packaged per-machine, just like U-Boot. So already
prepare the corresponding PREFERRED_PROVIDER rule.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -17,6 +17,7 @@ WKS_FILE ?= "${MACHINE}.wks"
 
 PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.12"
 
+PREFERRED_PROVIDER_trusted-firmware-a-${MACHINE} ?= "trusted-firmware-a-${MACHINE}"
 PREFERRED_PROVIDER_u-boot-${MACHINE} ?= "u-boot-${MACHINE}"
 
 USERS += "root"
