--- a/conf/machine/rpi4.conf
+++ b/conf/machine/rpi4.conf
@@ -12,7 +12,7 @@
 DISTRO_ARCH = "arm64"
 
 IMAGE_TYPE = "wic-img"
-IMAGER_BUILD_DEPS = "rpi-firmware arm-trusted-firmware-rpi4 linux-image-${KERNEL_NAME}"
+IMAGER_BUILD_DEPS = "rpi-firmware trusted-firmware-a-rpi4 linux-image-${KERNEL_NAME}"
 IMAGER_INSTALL += "${IMAGER_BUILD_DEPS}"
 
 IMAGE_BOOT_FILES = " \
@@ -26,7 +26,7 @@ IMAGE_BOOT_FILES = " \
     /usr/lib/rpi-firmware/overlays/*;overlays/ \
     /usr/lib/linux-image-*/broadcom/bcm2711-rpi-4-b.dtb \
     /usr/lib/linux-image-*/overlays/*;overlays/ \
-    /usr/lib/arm-trusted-firmware/rpi4/bl31.bin;bl31.bin \
+    /usr/lib/trusted-firmware-a/rpi4/bl31.bin;bl31.bin \
     /vmlinuz;kernel8.img \
     "
 
