--- a/conf/machine/macchiatobin.conf
+++ b/conf/machine/macchiatobin.conf
@@ -12,7 +12,7 @@
 DISTRO_ARCH = "arm64"
 
 IMAGE_TYPE = "wic-img"
-IMAGER_INSTALL += "u-boot-macchiatobin"
-IMAGER_BUILD_DEPS += "u-boot-macchiatobin"
+IMAGER_INSTALL += "trusted-firmware-a-macchiatobin"
+IMAGER_BUILD_DEPS += "trusted-firmware-a-macchiatobin"
 
 IMAGE_INSTALL += "u-boot-script"
