--- a/recipes-bsp/rpi-firmware/files/debian/jailhouse.dts
+++ b/recipes-bsp/rpi-firmware/files/debian/jailhouse.dts
@@ -1,3 +1,14 @@
+/*
+ * Jailhouse, a Linux-based partitioning hypervisor
+ *
+ * Copyright (c) Siemens AG, 2020-2021
+ *
+ * Authors:
+ *  Jan Kiszka <jan.kiszka@siemens.com>
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 /dts-v1/;
 /plugin/;
 / {
@@ -20,7 +31,7 @@
 	};
 
 	fragment@1 {
-		target = <&pcie0>;
+		target-path = "/scb/pcie@7d500000";
 		__overlay__ {
 			linux,pci-domain = <0x00000000>;
 		};
