--- a/recipes-bsp/rpi-firmware/files/rules
+++ b/recipes-bsp/rpi-firmware/files/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 override_dh_auto_build:
+	dtc -O dtb -b 0 -@ debian/aliases.dts -o boot/overlays/aliases.dtbo
 	dtc -O dtb -b 0 -@ debian/jailhouse.dts -o boot/overlays/jailhouse.dtbo
 
 %:
