Update Isar revision
TF-A patch is upstream, time to update. For that, we need to tune
TF_A_BINARIES, switch to DEBIAN_BUILD_DEPENDS in u-boot recipes and set
DISTRO_APT_SOURCES.

Isar renamed the deployed kernel image of arm64, so we need to account
for differences now.

Then Isar now forwards wic warnings. So we need to add an empty
bootloader line to the rpi4 wks file to avoid (harmless) complaints.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -11,6 +11,8 @@
 
 require conf/distro/debian-buster.conf
 
+DISTRO_APT_SOURCES = "conf/distro/debian-buster.list"
+
 KERNEL_NAME ?= "jailhouse"
 
 WKS_FILE ?= "${MACHINE}.wks"
