jailhouse: Enforce selection of latest version
Moving forward to kernel 5.10 would require so many backports to the
0.12 release that it is better to temporarily switch into "latest-only"
mode. This will be reverted once some 0.13 release is available.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/conf/distro/jailhouse-demo.conf
+++ b/conf/distro/jailhouse-demo.conf
@@ -17,7 +17,7 @@ KERNEL_NAME ?= "jailhouse"
 
 WKS_FILE ?= "${MACHINE}.wks"
 
-PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.12"
+PREFERRED_VERSION_jailhouse-${KERNEL_NAME} ?= "0.9999-next"
 
 PREFERRED_PROVIDER_trusted-firmware-a-${MACHINE} ?= "trusted-firmware-a-${MACHINE}"
 PREFERRED_PROVIDER_u-boot-${MACHINE} ?= "u-boot-${MACHINE}"
